# pons-dds

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  REFACTOR.md
.github/workflows/: bench.yml  ci.yml  pages.yml  rust.yml
benches/: compare_ddss.rs  solver.rs
dev/bench/: data.js  index.html
examples/: bisection_stats.rs  par_balance.rs  search_stats.rs  tt_sweep.rs
src/: analyse.rs  board.rs  convert.rs  dealer_par.rs  later_tricks.rs  lib.rs  lookup.rs  move_type.rs  moves.rs  par.rs  play.rs  pos.rs  quick_tricks.rs  search.rs  solve_board.rs  solver.rs  strain_flags.rs  tricks.rs  tt.rs  vulnerability.rs
tests/: compare_ddss.rs  compare_ddss_boards.rs  compare_ddss_plays.rs  consistency.rs  cross_check.rs
web/: Cargo.toml  README.md  app.js  index.html  style.css
web/.cargo/: config.toml
web/src/: lib.rs
