[package]
name = "pons-dds"
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
authors = ["Chen-Pang He (https://jdh8.org)"]
description = "Pure-Rust double dummy solver for contract bridge"
repository = "https://github.com/jdh8/pons-dds"
license = "Apache-2.0"
categories = ["game-development"]
keywords = ["bridge", "double-dummy"]

[lib]
name = "pons_dds"

[features]
# Per-node search instrumentation (TT hit rate, move-ordering cutoff
# index, node-0 early-exit funnel). Off by default — every counter bump
# is gated behind `#[cfg(feature = "profiling")]`, so a normal release
# build carries zero overhead.
profiling = []

[dependencies]
arrayvec = "0.7"
bitflags = "2"
contract-bridge = "0.1"
rayon = "1"
thiserror = "2"

[dev-dependencies]
contract-bridge = { version = "0.1", features = ["rand"] }
criterion = { version = "0.8", features = ["html_reports"] }
rand = "0.10"

[[bench]]
name = "solver"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
debug = "line-tables-only"

[profile.bench]
inherits = "release"
