[package]
name = "pons-dds"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
authors = ["Chen-Pang He (https://jdh8.org)"]
description = "Pure-Rust double dummy solver for contract bridge"
repository = "https://github.com/jdh8/pons-dds"
license = "Apache-2.0"
categories = ["game-development"]
keywords = ["bridge", "double-dummy"]

[lib]
name = "pons_dds"

[features]
# Per-node search instrumentation (TT hit rate, move-ordering cutoff
# index, node-0 early-exit funnel). Off by default — every counter bump
# is gated behind `#[cfg(feature = "profiling")]`, so a normal release
# build carries zero overhead.
profiling = []

[dependencies]
arrayvec = "0.7"
bitflags = "2"
contract-bridge = "0.1"
rayon = "1"
thiserror = "2"

[dev-dependencies]
contract-bridge = { version = "0.1", features = ["rand"] }
criterion = { version = "0.8", features = ["html_reports"] }
# FFI-backed DDS 2.9 reference engine, used as the oracle for the
# `compare_ddss` cross-check test and head-to-head bench. pons-dds is pure
# Rust, so it links cleanly alongside ddss-sys's C++ (unlike dds-bridge-sys).
# The raw -sys crate is used directly by `compare_ddss_boards` to call
# SolveBoard with mode = 1 (ddss's safe wrapper hardcodes mode = 0, whose
# forced-card `-2` sentinel its own decoder cannot represent).
ddss = "0.1"
ddss-sys = "0.1"
rand = "0.10"

[[bench]]
name = "solver"
harness = false

[[bench]]
name = "compare_ddss"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
debug = "line-tables-only"

[profile.bench]
inherits = "release"
