[package]
name = "pons-dds-web"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "Browser demo for pons-dds: client-side double-dummy solving"

# Standalone crate: an empty `[workspace]` makes this its own workspace root so
# the parent `pons-dds` package never adopts it, keeping the library's build and
# publish untouched.
[workspace]

[lib]
# cdylib for the wasm artifact; rlib so `cargo test` can build a native harness.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Dogfood THIS repo's solver.  We drive it strictly on its single-threaded
# paths (`Solver`, `solve_deal_on`) — the rayon fan-out in the free `solve_*`
# functions would need threads wasm doesn't have.  No `rand`/`getrandom`: random
# deals are shuffled in JS, so nothing in this crate needs an RNG backend.
pons-dds = { path = ".." }
# Must match pons-dds's contract-bridge version so FullDeal/Seat/Strain unify.
contract-bridge = "0.1"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# An un-optimized double-dummy solver makes the native `cargo test` glacial.
[profile.dev.package."*"]
opt-level = 2
